--- a/DatimgApp-SPA/src/app/nav/nav.component.html
+++ b/DatimgApp-SPA/src/app/nav/nav.component.html
@@ -18,7 +18,7 @@
       </a>
     
       <div class="dropdown-menu mt-3" *dropdownMenu>
-        <a class="dropdown-item" href="#">
+        <a class="dropdown-item" [routerLink]="['/member/edit']" href="#">
           <i class="fa fa-user"></i> Edit profile</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" (click)="loggedOut()">
