--- a/DatimgApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatimgApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -12,8 +12,8 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
-        <img class="card-img-top img-thumbnail" src="{{user.photoUrl}}" alt="{{user.knownAs}}">
         <div class="card-body">
+          <img class="card-img-top img-thumbnail" src="{{photoUrl}}" alt="{{user.knownAs}}">
           <div>
             <strong>Location:</strong>
             <p>{{user.city}}, {{user.country}}</p>
@@ -60,7 +60,8 @@
             </form>
           </tab>
           <tab heading="Edit Photos">
-            <p>Photo edit will go here</p>
+            <app-photo-editor [photos]="user.photos"
+            (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-editor>
           </tab>
         </tabset>
       </div>
