--- a/DatimgApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatimgApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -13,7 +13,7 @@
     <div class="col-sm-4">
       <div class="card">
         <div class="card-body">
-          <img class="card-img-top img-thumbnail" src="{{photoUrl}}" alt="{{user.knownAs}}">
+          <img class="card-img-top img-thumbnail" src="{{photoUrl || '../../../assets/user.png'}}" alt="{{user.knownAs}}">
           <div>
             <strong>Location:</strong>
             <p>{{user.city}}, {{user.country}}</p>
