--- a/DatimgApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatimgApp-SPA/src/app/members/member-card/member-card.component.html
@@ -7,7 +7,7 @@
           <i class="fa fa-user"></i></button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary">
+        <button class="btn btn-primary" (click)="sendLike(user.id)">
           <i class="fa fa-heart"></i></button>
       </li>
       <li class="list-inline-item">
@@ -18,7 +18,7 @@
   </div>
   <div class="card-body p-1">
     <h6 class="card-title text-cener mb-1"><i class="fa fa-user"></i>
-      {{user.knowAs}}, {{user.age}}
+      {{user.knownAs}}, {{user.age}}
     </h6>
     <p class="card-text text-muted text-center">{{user.city}}</p>
   </div>
