--- a/DatimgApp-SPA/src/app/nav/nav.component.html
+++ b/DatimgApp-SPA/src/app/nav/nav.component.html
@@ -1,15 +1,18 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand" [routerLink]="['/home']" >Dating App</a>
+    <a class="navbar-brand" [routerLink]="['/home']" href="#">Dating App</a>
     <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item active" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/members']">Matches</a>
+        <a class="nav-link" [routerLink]="['/members']" href="#">Matches</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/lists']">Lists</a>
+        <a class="nav-link" [routerLink]="['/lists']" href="#">Lists</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/messages']" >Messages</a>
+        <a class="nav-link" [routerLink]="['/messages']" href="#">Messages</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/admin']" href="#">Admin</a>
       </li>
     </ul>
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
