--- a/DatimgApp-SPA/src/app/nav/nav.component.html
+++ b/DatimgApp-SPA/src/app/nav/nav.component.html
@@ -11,7 +11,7 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/messages']" href="#">Messages</a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
+      <li *appHasRole="['Admin', 'Moderator']" class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/admin']" href="#">Admin</a>
       </li>
     </ul>
