Fixing for user's photos in lists

--- a/DatimgApp-SPA/src/app/members/member-messages/member-messages.component.html
+++ b/DatimgApp-SPA/src/app/members/member-messages/member-messages.component.html
@@ -9,7 +9,7 @@
         <!-- to them -->
         <div *ngIf="message.senderId == recipientId">
           <span class="chat-img float-left">
-            <img src="{{message.senderPhotoUrl}}" alt="{{message.senderKnownAs}}" class="rounded-circle">
+            <img src="{{message.senderPhotoUrl || '../../../../../assets/user.png'}}" alt="{{message.senderKnownAs}}" class="rounded-circle">
           </span>
           <div class="chat-body">
             <div class="header">
@@ -24,7 +24,7 @@
         <!-- to me -->
         <div *ngIf="message.senderId != recipientId">
           <span class="chat-img float-right">
-            <img src="{{message.senderPhotoUrl}}" alt="{{message.senderKnownAs}}" class="rounded-circle">
+            <img src="{{message.senderPhotoUrl || '../../../../../assets/user.png'}}" alt="{{message.senderKnownAs}}" class="rounded-circle">
           </span>
           <div class="chat-body">
             <div class="header">
